webhook/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  selector:
    app: webhook
  ports:
    - name: http
      port: 8080
      targetPort: 8080
