webhook/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook
spec:
  to:
    kind: Service
    name: webhook
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
